BB-20218: Wrong position of an info icon on a product page - Fixed positions of an info icon - Fixed specific input height

--- a/src/Oro/Bundle/ProductBundle/Resources/public/blank/scss/variables/product-view-quantity-config.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/blank/scss/variables/product-view-quantity-config.scss
@@ -17,8 +17,6 @@ $product-view-quantity-unit-label-text-align: center !default;
 $product-view-quantity-value-width: 30% !default;
 $product-view-quantity-value-half-width: 50% !default;
 
-$product-view-quantity-value-input-offset: 0 !default;
-$product-view-quantity-value-input-inner-offset: 11px 8px !default;
 $product-view-quantity-value-input-text-align: center !default;
 
 $product-view-quantity-error-width: 100% !default;
